Update recorginization and sending message.ipynb

--- a/recorginization and sending message.ipynb
+++ b/recorginization and sending message.ipynb
@@ -135,11 +135,12 @@
     "            print(\"WHATSAPP MESSAGE SENT!!!\")\n",
     "            sender_email = \"yuvraj.summerintenship@gmail.com\"\n",
     "            rec_email = \"yuvraj15160@gmail.com\"\n",
+                 password =  \"**************\"\n",
     "            message = \"yuvraj face dedected at\", + time , +date \n",
     "\n",
     "            server = smtplib.SMTP('smtp.gmail.com', 587)\n",
     "            server.starttls()\n",
-    "            server.login(sender_email, 'fortask@6')\n",
+    "            server.login(sender_email, password)\n",
     "            print(\"Login success\")\n",
     "            server.sendmail(sender_email, rec_email, message)\n",
     "            print(\"Email has been sent to \", rec_email)\n",
